--- a/login.html
+++ b/login.html
@@ -15,8 +15,11 @@
 
 <body class="body">
     <div class="container">
+        <div class="loader">
+            <img src="./image/Double Ring-1s-117px.gif" alt="Loading">
+        </div>
         <div class="logo d-flex justify-content-center mt-5">
-            <img src="./image/Logo.png" alt="Logo" class="img-logo img-fluid rounded d-flex justify-content-center">
+            <img src="./image/Untitled-1 copy.png" alt="Logo" class="img-logo img-fluid rounded d-flex justify-content-center">
         </div>
 
         <div class="login bg-white mt-3">
