--- a/index.html
+++ b/index.html
@@ -23,27 +23,26 @@
         </div>
 
         <div class="login bg-white mt-3">
-            <form action="/action_page.php" class="">
+            <form>
                 <h3 class="text-center pt-3">ثبت نام</h3>
-                <div class="mb-3 mt-3 icon-message">
+                <div class=" mt-3 icon-message">
                     <i class="fa fa-address-card pt-2 px-4"></i>
-                    <input type="text" class="form-control px-5 mx-3" id="email"
-                        placeholder="نام خود را وارد کنید." name="email">
+                    <input type="text" class="form-control px-5 mx-3" id="user"
+                        placeholder="نام خود را وارد کنید." name="user">
+                        <span id="usererror" style="color: rgb(219, 23, 23);" class="px-3"></span>
                 </div>
-                <div class="mb-3 mt-3 icon-message">
-                    <i class="fa fa-address-card-o pt-2 px-4"></i>
-                    <input type="number" class="form-control px-5 mx-3" id="email"
-                        placeholder="کد ملی خود را وارد کنید." name="email">
-                </div>
-                <div class="mb-3 mt-3 icon-message">
+                
+                <div class="icon-message">
                     <i class="fa fa-envelope pt-2 px-4"></i>
                     <input type="email" class="form-control px-5 mx-3" id="email"
                         placeholder="آدرس ایمیل خود را وارد کنید." name="email">
+                        <span id="emailEror" style="color: rgb(219, 23, 23);" class="px-3"></span>
                 </div>
-                <div class="mb-3 mt-3 icon-lock">
+                <div class="icon-lock">
                     <i class="fa fa-lock pt-2 px-4"></i>
                     <input type="password" class="form-control px-5 mx-3" id="password-field"
                         placeholder="ساخت رمز عبور" name="pswd">
+                        <span id="passEror" style="color: rgb(219, 23, 23);" class="px-3"></span>
                     <div class="toggle-password">
                         <i class="fa fa-eye-slash"></i>
                         <i class="fa fa-eye"></i>
